优化使用 clamp 方法